# music-bookmarks-dl

./: .gitignore  README.md  config.py  main.py  music_downloader.py  pyproject.toml  requirements.in  requirements.txt
