[tool.poetry]
name = "ytmarkdl"
version = "1.0"
description = "Download Youtube music from Chrome bookmarks"
authors = ["Crossoufire"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
eyed3 = "^0.9.7"
spotipy = "^2.24.0"
mutagen = "^1.47.0"
tqdm = "^4.66.5"
yt-dlp = "^2024.8.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
