[project]
name = "ytmarkdl"
version = "2.0.0"
authors = ["Crossoufire"]
license = "MIT"
description = "Download Youtube music from Chrome bookmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eyed3>=0.9.7",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "spotipy>=2.25.0",
    "yt-dlp>=2025.1.15",
]
